--- a/app/src/components/PostagemCampanha.css
+++ b/app/src/components/PostagemCampanha.css
@@ -35,7 +35,7 @@
   }
   
   .postagem-button {
-    background-color: #8b69c2; 
+    background-color: #28a745; 
     color: #fff;
     border: none;
     padding: 10px 20px;
