--- a/app/src/components/Footer.css
+++ b/app/src/components/Footer.css
@@ -1,43 +1,48 @@
 .footer {
-    background-color: #333;
-    color: #fff;
-    padding: 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 10px;
+  background-color: #333; 
+  color: #fff; 
+  padding: 30px 0;
+}
+
+.footer-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.footer-text {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.footer-links {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-links a {
+  color: #fff; 
+  text-decoration: none; 
+  font-size: 16px;
+  margin-bottom: 10px; 
+}
+
+.footer-links a:hover {
+  text-decoration: none;
+}
+
+
+.footer-links i {
+  margin-right: 5px;
+  font-size: 20px;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    text-align: center;
   }
-  
-  .contact-info {
-    display: inline-block;
-    margin-right: 20px;
-    padding: 0 20px;
+  .footer .col-lg-3 {
+    margin-bottom: 20px;
   }
-  
-  .footer-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: -125px;
-  }
-  
-  .footer-links a {
-    text-decoration: none;
-    color: #fff;
-    margin: 0 10px;
-  }
-  
-  .logo {
-    display: flex;
-    align-items: center;
-    margin-right: 40px;
-  }
-  
-  .logo img {
-    max-width: 100px;
-    max-height: 50px;
-  }
-  
+}
+
